[metadata]
name = kheppy
author = Michal Augoff
summary = Python API with evolutionary computation and reinforcement learning algorithms for Khepera simulation engine
license = MIT
description-file = README.md
description-content-type = text/markdown
requires-python = >=3.6

[files]
packages = kheppy
